	*** RELEASE 8.2.2 ***

2006-11-18  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added missing somali voices
	- Fixed electricity to work on 'any' gnucap release

	* configure.in:
	* src/boards/python/electric.py:
	* src/boards/python/melody.py:

	*** RELEASE 8.2.1 ***

2006-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/gameutil.c: (gc_util_create_rootdir): ported to use glib.
	now acount with accents in windows no more fail to save the config file.

2006-11-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/properties.c: (gc_prop_config_file_get),
	(gc_prop_new): changed to no more use open. open is not portable
	and it fails to open file with utf8 characters on windows.

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/menu.c: (_add_xml_to_data): no more save translated text in the base.
	 save the english version instead.

2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/erase.c: (erase_create_item): (backport) fixed out of bounds image


2006-11-11  Bruno coudoin  <bruno.coudoin@free.fr>

	- Backport from HEAD:
	  Quiting the gnumch or searace activity crash GCompris
	  1 times on 10.

	- Minor:
	- new interrupt audio mode to have a more reactive experience
	in audio activity. Audio memory and then melody activities
	are now much more pleasant to play (Yves fix on a Markus request).


	* boards/skins/gartoon/ofsetlogo.png:
	* configure.in:
	* src/boards/memory.c: (start_board), (end_board), (item_event):
	* src/boards/py-mod-anim.c: (AnimCanvas_free):
	* src/boards/py-mod-sound.c: (py_gc_sound_policy_set),
	(py_gc_sound_policy_get), (python_gcompris_sound_module_init):
	* src/boards/python/melody.py:
	* src/gcompris/about.c: (gc_about_start):
	* src/gcompris/gcompris.c: (gc_fullscreen_set):
	* src/gcompris/soundutil.c: (gc_sound_policy_set), (free_string),
	(gc_sound_play_ogg_list):
	* src/gcompris/soundutil.h:

	*** RELEASE 8.2 ***

2006-11-05  Bruno coudoin  <bruno.coudoin@free.fr>
