@@ -169,6 +169,7 @@ class Gcompris_anim:
     self.ANCHOR_SW = 6
     self.ANCHOR_S  = 7
     self.ANCHOR_SE = 8
+    self.ANCHOR_T  = 9
 
     self.anchors = { 'LINE': [ self.ANCHOR_SW , self.ANCHOR_NE ],
                      'RECT': [ self.ANCHOR_N,
@@ -180,7 +181,7 @@ class Gcompris_anim:
                                self.ANCHOR_W,
                                self.ANCHOR_NW
                                ],
-                     'TEXT': [ self.ANCHOR_N ]
+                     'TEXT': [ self.ANCHOR_T ]
                      }
     self.anchors ['FILL_RECT'] =  self.anchors ['RECT']
     self.anchors ['CIRCLE'] =  self.anchors ['RECT']
@@ -485,7 +486,7 @@ class Gcompris_anim:
     if (self.selected == None):
       return True
     elif (gobject.type_name(self.selected.item_list[0])!="GnomeCanvasText"):
-      print "Not Text object when got key !!!"
+      #print "Not Text object when got key !!!"
       return True
 
     textItem = self.selected.item_list[0]
@@ -496,15 +497,12 @@ class Gcompris_anim:
 
     if ((keyval == gtk.keysyms.BackSpace) or
         (keyval == gtk.keysyms.Delete)):
-      print "DEL", oldtext, len(oldtext)
       if (len(oldtext) != 1):
         newtext = oldtext[:-1]
       else:
         newtext = u'?'
+      self.last_commit = newtext
     else:
-
-
-
       if ((oldtext[:1] == u'?') and (len(oldtext)==1)):
         oldtext = u' '
         oldtext = oldtext.strip()
@@ -521,9 +519,7 @@ class Gcompris_anim:
       else:
         newtext = oldtext
 
-
     textItem.set(markup=newtext.encode('UTF-8'))
-    self.updated_text(textItem)
 
     return True
 
@@ -1284,7 +1280,6 @@ class Gcompris_anim:
 
 
           if self.tools[self.current_tool][0] == "TEXT":
-            self.updated_text(self.newitem)
             (x1, x2, y1, y2) = self.get_bounds(self.newitem)
             self.object_set_size_and_pos(self.newitemgroup, x1, x2, y1, y2)
             self.select_item(self.newitemgroup)
@@ -1569,6 +1564,13 @@ class Gcompris_anim:
           y1= y2,
           y2= y2 + self.DEFAULT_ANCHOR_SIZE
           )
+      elif anchor_type == self.ANCHOR_T:
+        anchor.set(
+          x1= (x1 + x2 - self.DEFAULT_ANCHOR_SIZE*3)/2,
+          x2= (x1 + x2 + self.DEFAULT_ANCHOR_SIZE*3)/2,
+          y1= y2,
+          y2= y2 + self.DEFAULT_ANCHOR_SIZE
+          )
       elif anchor_type == self.ANCHOR_NE:
         anchor.set(
           x1= x2,
@@ -1630,11 +1632,9 @@ class Gcompris_anim:
       return False
 
     if event.state & gtk.gdk.BUTTON1_MASK:
-      # warning: anchor is in a group of anchors, wich is in the object group
+      # warning: anchor is in a group of anchors, which is in the object group
       parent=item.get_property("parent").get_property("parent")
       real_item=parent.item_list[0]
-      if gobject.type_name(real_item)=="GnomeCanvasText":
-        return
 
       wx=event.x
       wy=event.y
@@ -1652,6 +1652,10 @@ class Gcompris_anim:
         y1=real_item.get_property("y")
         x2=x1+real_item.get_property("width")
         y2=y1+real_item.get_property("height")
+      elif gobject.type_name(real_item)=="GnomeCanvasText":
+        y1=y
+        y2=y+real_item.get_property("text_height")
+        pass
       else:
         x1=real_item.get_property("x1")
         y1=real_item.get_property("y1")
@@ -1664,6 +1668,13 @@ class Gcompris_anim:
                                      y1=y1,
                                      x2=x2,
                                      y2=y
+                                     )
+      elif (anchor_type == self.ANCHOR_T):
+        self.object_set_size_and_pos(parent,
+                                     x1=x,
+                                     y1=y1,
+                                     x2=x,
+                                     y2=y2
                                      )
       elif (anchor_type == self.ANCHOR_NE):
         self.object_set_size_and_pos(parent,
@@ -1843,7 +1854,6 @@ class Gcompris_anim:
       anchor.set_data('anchor_type', anchor_type)
       anchor.connect("event", self.resize_item_event,anchor_type)
 
-
   def select_item(self, group):
     if (self.selected != None):
       self.unselect()
@@ -1904,15 +1914,6 @@ class Gcompris_anim:
 
     item.get_property("parent").affine_relative(mat)
 
-
-  def updated_text(self, item):
-    #item.set(clip=1)
-    #bounds = self.get_bounds(item)
-    #print bounds, bounds[2]-bounds[0], bounds[3]-bounds[1]
-    #item.set(clip_width=bounds[2]-bounds[0],
-    #         clip_height=bounds[3]-bounds[1]
-    #         )
-    return
 
 ###########################################
 # Anim 2 specific
